Update contrast, design/wire clear all, fix border radius, locked signer flow update

--- a/app/tray/AccountSelector/AccountController/style/index.styl
+++ b/app/tray/AccountSelector/AccountController/style/index.styl
@@ -237,7 +237,7 @@
     position relative
     opacity 1
     z-index 3030000
-    border-radius 20px
+    border-radius 26px
     transition var(--standard), background 0.2s linear
     z-index 9999000
     height 74px
